fixed photo proflie

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="feedname">
         <div class="proflieuser">
           <div class="pic">
-            <img src="../Pics/pics4HW04.jpg" alt="prolifepic">
+            <img src="pics/pics4HW04.jpg" alt="prolifepic">
           </div>
         </div>
         <div class="userinfo">
